@@ -29,10 +29,7 @@ GStreamer-based CD ripping tool. Saves audio CDs to Ogg/vorbis.
 
 %configure
 
-%make
-
-%install
-[ -n "$RPM_BUILD_ROOT" -a "$RPM_BUILD_ROOT" != / ] && rm -rf $RPM_BUILD_ROOT
+make
 
 export GCONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1;
 %makeinstall
@@ -44,7 +41,8 @@ unset GCONF_DISABLE_MAKEFILE_SCHEMA_INSTALL
 [ -n "$RPM_BUILD_ROOT" -a "$RPM_BUILD_ROOT" != / ] && rm -rf $RPM_BUILD_ROOT
 
 %post
-export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` gconftool-2 --makefile-install-rule %{_sysconfdir}/gconf/schemas/sound-juicer.schemas > /dev/null
+export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` 
+gconftool-2 --makefile-install-rule %{_sysconfdir}/gconf/schemas/sound-juicer.schemas > /dev/null
 
 %files -f sound-juicer.lang
 %defattr(-, root, root)
