@@ -1,3 +1,8 @@
+2003-07-04 Christian Schaller <Uraeus@gnome.org>
+
+	* Makefile.am, sound-juicer.spec.in
+	Fix the spec file and make sure it gets packaged
+
 2003-07-03  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-musicbrainz.c:
